...
        }}
      />
      <Tabs.Screen
        name="teams"
        options={{
          title: 'Teams',
          tabBarButtonTestID: 'tab-teams',
          tabBarIcon: ({ color, size, focused }) => (
            <TabIcon name="shield-account-outline" activeName="shield-account" color={color} size={size} focused={focused} />
          ),
        }}
      />
      <Tabs.Screen
...
